a lot of flask progress

--- a/templates/input_handle.html
+++ b/templates/input_handle.html
@@ -1,4 +1,9 @@
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
+
+<h1>World Cup Leader Tweets</h1>
+<h3>A Northwestern University Project</h3>
+
 <form>
-  Twitter Handle:<br>
+  Enter a Twitter Handle:<br>
   <input type="text" name="handle"><br>
 </form>
