--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -18,3 +18,11 @@ h1, h3 {
 form {
 	text-align: center;
 }
+
+tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+tr:hover {
+	background-color: #C8C8C8;
+}
