slight template change

--- a/templates/result.html
+++ b/templates/result.html
@@ -15,11 +15,11 @@
 	    	<td>{{item[0]}}</td>
 	    	<td>{{item[1]}}</td>
 	    	<td>{{item[2]}}</td>
-	    	<td>{{item[3][0]}}</td>
-	    	<td>{{item[3][1]}}</td>
-	    	<td>{{item[3][2]}}</td>
-	    	<td>{{item[3][3]}}</td>
-	    	<td>{{item[3][4]}}</td>
+	    	<td>{{item[3][0][1]}}</td>
+	    	<td>{{item[3][1][1]}}</td>
+	    	<td>{{item[3][2][1]}}</td>
+	    	<td>{{item[3][3][1]}}</td>
+	    	<td>{{item[3][4][1]}}</td>
 	   </tr>
     {% endfor %}
 </table>
