--- a/templates/input_handle.html
+++ b/templates/input_handle.html
@@ -5,5 +5,5 @@
 
 <form>
   Enter a Twitter Handle:<br>
-  <input type="text" name="handle"><br>
+  <input type="text" name="handle" autocomplete="off"><br>
 </form>
