--- a/templates/input_handle.html
+++ b/templates/input_handle.html
@@ -1,5 +1,7 @@
 <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
 
+<link rel="shortcut icon" href="">
+
 <h1>World Cup Leader Tweets</h1>
 <h3>A Northwestern University Project</h3>
 
