--- a/templates/result.html
+++ b/templates/result.html
@@ -5,6 +5,7 @@
 
 <table>
     <tr>
+    	<th>Rank</th>
     	<th>Match Value</th>
     	<th>Country</th>
     	<th>Handle</th>
@@ -15,11 +16,12 @@
 	    	<td>{{item[0]}}</td>
 	    	<td>{{item[1]}}</td>
 	    	<td>{{item[2]}}</td>
-	    	<td>{{item[3][0][1]}}</td>
-	    	<td>{{item[3][1][1]}}</td>
-	    	<td>{{item[3][2][1]}}</td>
-	    	<td>{{item[3][3][1]}}</td>
-	    	<td>{{item[3][4][1]}}</td>
+	    	<td>{{item[3]}}</td>
+	    	<td>{{item[4][0][1]}}</td>
+	    	<td>{{item[4][1][1]}}</td>
+	    	<td>{{item[4][2][1]}}</td>
+	    	<td>{{item[4][3][1]}}</td>
+	    	<td>{{item[4][4][1]}}</td>
 	   </tr>
     {% endfor %}
 </table>
