--- a/app/templates/input_handle.html
+++ b/app/templates/input_handle.html
@@ -7,3 +7,5 @@
   Enter a Twitter Handle:<br>
   <input type="text" name="handle" autocomplete="off"><br>
 </form>
+
+<a href="/contact">Contact</a>
