--- a/app/templates/input_handle.html
+++ b/app/templates/input_handle.html
@@ -1,11 +1,17 @@
 <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
 
-<h1>World Cup Leader Tweets</h1>
-<h3>A Northwestern University Project</h3>
+<body>
 
-<form>
-  Enter a Twitter Handle:<br>
-  <input type="text" name="handle" autocomplete="off"><br>
-</form>
+	<h1>World Cup Leader Tweets</h1>
+	<h3>A Northwestern University Project</h3>
 
-<a href="/contact">Contact</a>
+	<form>
+	  Enter a Twitter Handle:<br>
+	  <input type="text" name="handle" autocomplete="off"><br>
+	</form>
+
+</body>
+
+<div id="footer">
+	<a href="/contact">Contact</a>
+</div>
