--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -26,3 +26,10 @@ tr:nth-child(even) {
 tr:hover {
 	background-color: #C8C8C8;
 }
+
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;
+}
