--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -1,29 +1,30 @@
 <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
 
-<h1>World Cup Leader Tweets</h1>
-<h3>A Northwestern University Project</h3>
-
-<table>
-    <tr>
-    	<th>Rank</th>
-    	<th>Match Value</th>
-    	<th>Country</th>
-    	<th>Handle</th>
-    	<th colspan=5>Top Matched Words</th>
-    </tr>
-    {% for item in rank %}
-    	<tr>
-	    	<td>{{item[0]}}</td>
-	    	<td>{{item[1]}}</td>
-	    	<td>{{item[2]}}</td>
-	    	<td>{{item[3]}}</td>
-	    	<td>{{item[4][0][1]}}</td>
-	    	<td>{{item[4][1][1]}}</td>
-	    	<td>{{item[4][2][1]}}</td>
-	    	<td>{{item[4][3][1]}}</td>
-	    	<td>{{item[4][4][1]}}</td>
-	   </tr>
-    {% endfor %}
-</table>
+<body>
+	<h1>World Cup Leader Tweets</h1>
+	<h3>A Northwestern University Project</h3>
+	<table>
+	    <tr>
+	    	<th>Rank</th>
+	    	<th>Match Value</th>
+	    	<th>Country</th>
+	    	<th>Handle</th>
+	    	<th colspan=5>Top Matched Words</th>
+	    </tr>
+	    {% for item in rank %}
+	    	<tr>
+		    	<td>{{item[0]}}</td>
+		    	<td>{{item[1]}}</td>
+		    	<td>{{item[2]}}</td>
+		    	<td>{{item[3]}}</td>
+		    	<td>{{item[4][0][1]}}</td>
+		    	<td>{{item[4][1][1]}}</td>
+		    	<td>{{item[4][2][1]}}</td>
+		    	<td>{{item[4][3][1]}}</td>
+		    	<td>{{item[4][4][1]}}</td>
+		   </tr>
+	    {% endfor %}
+	</table>
+</body>
 
 <a href="/contact">Contact</a>
